content/vault/v1.10.x/content/docs/commands/operator/members.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: docs
page_title: operator members - Command
description: |-
  The "operator members" command provides information about the nodes making up an HA cluster.
---

# operator members

The `operator members` lists the active node and the peers that it's heard from
since it became active.

## Examples

Get the key status:

```shell-session
$ vault operator members
Host Name  API Address             Cluster Address          ActiveNode    Last Echo
---------  -----------             ---------------          ----------    ---------
node1      http://10.0.0.2:8200    https://10.0.0.2:8201    true          <nil>
node2      http://10.0.0.3:8200    https://10.0.0.3:8201    false         2021-11-29 10:19:39.236409 -0500 EST
node3      http://10.0.0.4:8200    https://10.0.0.4:8201    false         2021-11-29 10:19:37.436283 -0500 EST

```

## Usage

The following flags are available in addition to the [standard set of
flags](/vault/docs/commands) included on all commands.

### Output Options

- `-format` `(string: "table")` - Print the output in the given format. Valid
  formats are "table", "json", or "yaml". This can also be specified via the
  `VAULT_FORMAT` environment variable.
